# game.libretro.yabasanshiro

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/yabasanshiro/: yabasanshiro.txt
depends/common/yabause/: CMakeLists.txt  yabause.txt
depends/windows/mingw/: 03-use-curl.patch  CMakeLists.txt
game.libretro.yabasanshiro/: addon.xml.in
game.libretro.yabasanshiro/resources/language/resource.language.ast_es/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.cy_gb/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.da_dk/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.en_gb/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.es_mx/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.fr_ca/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.he_il/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.id_id/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.it_it/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.kn_in/: strings.po
game.libretro.yabasanshiro/resources/language/resource.language.mk_mk/: strings.po
game.libretro.yabause/: addon.xml  addon.xml.in  buttonmap.xml
game.libretro.yabause/resources/: settings.xml  topology.xml
gameclient.yabause/: addon.xml
(+94 files in other folders)
